--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 spring.datasource.url=jdbc:mysql://localhost/youtube?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 spring.datasource.dbcp2.connection-init-sqls="useUnicode=yes;characterEncoding=utf8;"
 #My CONFIG
@@ -11,4 +12,6 @@ server.port=8083
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
 
